--- a/paradigm/paradigm.html
+++ b/paradigm/paradigm.html
@@ -1,5 +1,5 @@
 ---
-title: News
+title: APEX PAradigm
 sidebar: home_sidebar
 keywords: news, blog, updates, release notes, announcements
 permalink: /news/
