--- a/paradigm/paradigm.html
+++ b/paradigm/paradigm.html
@@ -1,8 +1,8 @@
 ---
-title: APEX PAradigm
+title: APEX Paradigm
 sidebar: home_sidebar
 keywords: news, blog, updates, release notes, announcements
-permalink: /news/
+permalink: /paradigm/
 toc: false
 ---
 
