Updated the paradigm sidebard.

--- a/paradigm/paradigm.html
+++ b/paradigm/paradigm.html
@@ -1,6 +1,6 @@
 ---
 title: APEX Paradigm
-sidebar: home_sidebar
+sidebar: paradigm_sidebar
 keywords: news, blog, updates, release notes, announcements
 permalink: /paradigm/
 toc: false
