--- a/protocol/protocol.html
+++ b/protocol/protocol.html
@@ -1,6 +1,6 @@
 ---
 title: APEX Protocol
-sidebar: protocol_sidebar
+sidebar: paradigm_sidebar
 keywords: news, blog, updates, release notes, announcements
 permalink: /protocol/
 toc: false
