--- a/software/software.html
+++ b/software/software.html
@@ -1,6 +1,6 @@
 ---
 title: APEX Reference Application
-sidebar: paradigm_sidebar
+sidebar: software_sidebar
 keywords: news, blog, updates, release notes, announcements
 permalink: /software/
 toc: false
